...
                confirmationHandler(text, age)
            } else {
                print("No name or age entered")
            }
        }
        
        let cancelAction = UIAlertAction(title: "Cancel", style: .Cancel, handler: nil)
        
        alertController.addTextFieldWithConfigurationHandler { textField in
            textField.placeholder = "Enter a name"
            textField.textAlignment =  NSTextAlignment.Center
            inputNameTextField = textField
        }
...
        alertController.addAction(cancelAction)
        
        return alertController
    }
    
    @IBAction func addDogButtonPressed(sender: AnyObject) {
        let alert = textBoxAlert(title: "Add your dog!", message: "Enter your dog's information below") { name, age in
            if self.dogGender == .Male {
                let image = UIImage(named: "Male_Silhouette")
                DogController.sharedController.createDog(name, age: Int(age), sex: true, image: UIImagePNGRepresentation(image!))
            } else {
                let image = UIImage(named: "Female_Silhouette")
                DogController.sharedController.createDog(name, age: Int(age), sex: false, image: UIImagePNGRepresentation(image!))
...
