...
                            <constraint firstItem="Ri5-2y-gZ1" firstAttribute="leading" secondItem="6Zp-gm-9Gk" secondAttribute="leading" id="8US-Dr-nw8"/>
                            <constraint firstAttribute="trailing" secondItem="Ri5-2y-gZ1" secondAttribute="trailing" id="PsN-pr-K83"/>
                            <constraint firstItem="ib5-HE-g1M" firstAttribute="top" secondItem="Ri5-2y-gZ1" secondAttribute="bottom" id="hDe-8L-0sz"/>
                            <constraint firstItem="Ri5-2y-gZ1" firstAttribute="top" secondItem="U9r-5r-Kau" secondAttribute="bottom" id="lLd-bN-vAR"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="My Bark Pack" id="0OV-pi-P3f">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6DT-Qt-WKX">
                            <connections>
                                <action selector="addDogButtonPressed:" destination="J9t-nr-Hjw" id="Yg8-q7-diM"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
